oxifft-codegen/tests/compile_fail/notw_unknown_size.rs
use oxifft_codegen::gen_notw_codelet;

gen_notw_codelet!(6);

fn main() {}
